<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SYM - Use of environmental data</string>
    <string name="main_butt_bar">Bar Code</string>
    <string name="main_butt_beacon">iBeacon</string>
    <string name="main_butt_compass">Compass</string>
    <string name="main_butt_nfc">NFC</string>
    <string name="good">Next Activity</string>

    <string name="button_bar_activity">Read bar code</string>
    <string name="button_beacon_activity">Start detection of beacon entities</string>
    <string name="listView_beacon_activity">List of beacon entities</string>
    <string name="textView_beacon_activity">Text of beacon entities</string>

    <string name="enter_username_hint">Username</string>
    <string name="enter_password_hint">Password</string>
    <string name="connect_button_text">Connect</string>
    <string name="mim_type_nfc">text/plain</string>
    <string name="max_security_nfc">MAX SECURITY</string>
    <string name="medium_security_nfc">MEDIUM SECURITY</string>
    <string name="low_security_nfc">LOW SECURITY</string>
    <string name="access_with_sufficient_privileges">ACCES GUARANTEED !</string>
    <string name="access_without_sufficient_privileges">Bad Security Level, try to re-use your NFC card</string>



</resources>