<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/main_butt_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_butt_bar" />

    <Button
        android:id="@+id/main_butt_beacon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_butt_beacon" />

    <Button
        android:id="@+id/main_butt_compass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_butt_compass" />

    <Button
        android:id="@+id/main_butt_nfc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_butt_nfc" />


</LinearLayout>