<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/buttonMaxSecurity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_security_nfc"/>

    <Button
        android:id="@+id/buttonMediumSecurity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medium_security_nfc"/>

    <Button
        android:id="@+id/buttonLowSecurity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/low_security_nfc"/>

    <TextView
        android:id="@+id/nfcSecurityLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />



</LinearLayout>